--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>SPA Rick and Morty</title>
 </head>
 <body>
-    
+    <header class="header"></header>
+    <main class="main"></main>
 </body>
 </html>
